<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item android:title="@string/product">
            <menu>
                <item
                    android:id="@+id/nav_category"
                    android:title="@string/nav_category" />
                <item
                    android:id="@+id/nav_food"
                    android:title="@string/nav_food" />

                <item
                    android:id="@+id/nav_group_topping"
                    android:title="@string/nav_group_topping" />

                <item
                    android:id="@+id/nav_topping"
                    android:title="@string/nav_topping" />

                <item
                    android:id="@+id/nav_table"
                    android:title="@string/nav_table" />


            </menu>
        </item>


    </group>

    <item android:title="@string/stock">
        <menu>
            <item
                android:id="@+id/nav_stock"
                android:title="@string/nav_stock" />
        </menu>
    </item>

    <item android:title="@string/report">
        <menu>
            <item
                android:id="@+id/nav_report"
                android:title="@string/nav_report" />

        </menu>
    </item>

    <item android:title="@string/user_management">
        <menu>
            <item
                android:id="@+id/nav_user_manage"
                android:title="@string/nav_user" />
        </menu>
    </item>

    <item android:title="@string/nav_language">
        <menu>
            <item
                android:id="@+id/nav_language"
                android:title="@string/nav_set_language" />
        </menu>
    </item>

            <item
                android:id="@+id/go_back_sale"
                android:title="@string/nav_back_home" />



</menu>