<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_popupAddTopping"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dip" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/name_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/name_edt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="20"
                android:inputType="text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/price_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit_price"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/price_edt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="20"
                android:inputType="numberDecimal"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/group_topping_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_group_topping"
                android:textSize="20sp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/group_topping">

            </Spinner>

        </LinearLayout>
    </LinearLayout>







    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/clearAddTopping"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/btn_red"
            android:text="@string/clear"
            android:textSize="20sp" />

        <Button
            android:id="@+id/updateTopping"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/btn_purple"
            android:text="@string/confirm"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>