<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_popupAddProduct"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/name_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/colorBlack"
            android:textSize="30sp" />

        <Button
            android:id="@+id/removeButton"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="17dp"
            android:background="@drawable/btn_red"
            android:text="@string/remove"
            android:textSize="20sp" />
        
    </RelativeLayout>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/quantityBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="20"
        android:inputType="number"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unit_price"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/priceBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="20"
        android:inputType="numberDecimal"
        android:textSize="18sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/topping_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_topping"
            android:textSize="20sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/topping_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0.5dp"
            android:layout_gravity="center">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

    <Button
        android:id="@+id/confirmButton"
        style="@style/ButtonText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_green"
        android:text="@string/confirm"
        android:textSize="20sp" />

</LinearLayout>