<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBG"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/printButton"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:background="@drawable/btn_purple"
            android:text="@string/print" />
        <Button
        android:id="@+id/endButton"
        style="@style/ButtonText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:background="@drawable/btn_green"
        android:text="@string/confirm" />

        <Button
            android:id="@+id/saveButton"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:visibility="gone"
            android:background="@drawable/btn_blue"
            android:text="@string/save" />


    </LinearLayout>

</android.support.v7.widget.LinearLayoutCompat>

