<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/layout_sale"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBG"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/member_button"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@drawable/btn_yellow"
            android:text="@string/member" />

        <Button
            android:id="@+id/table_button"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@drawable/btn_blue"
            android:text="@string/table_list" />

        <Button
            android:id="@+id/btn_bil_quickly"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@drawable/btn_black"
            android:text="@string/open_quickly" />
    </LinearLayout>

</android.support.v7.widget.LinearLayoutCompat>

