<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_popupAddTopping"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="600dp"
    android:minHeight="450dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="5dip" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:visibility="gone">

    </RelativeLayout>

    <TextView
        android:id="@+id/name_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="nameProduct"
        android:textColor="@color/colorBlack"
        android:textSize="30sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/quantityBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="20"
        android:inputType="number"
        android:textSize="18sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/topping_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_topping"
                android:textSize="20sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/topping_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="0.5dp"
                android:layout_gravity="center">

            </android.support.v7.widget.RecyclerView>

        </LinearLayout>
    </LinearLayout>



    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/clearAddCategory"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/btn_red"
            android:text="@string/clear"
            android:textSize="20sp" />

        <Button
            android:id="@+id/confirmAddCategory"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/btn_green"
            android:text="@string/confirm"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>