<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_popupAddProduct"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="5dip" >


        <!--Your other text views, buttons... etc surrounded by RelativeLayout
    or LinearLayout goes here-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/scanButton"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_blue"
            android:text="@string/scan"
            android:textSize="20sp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/gpk_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="gpk"
            android:visibility="gone"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/barcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="code"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/barcodeBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="20"
                android:inputType="number"
                android:focusable="false"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/nameBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="20"
        android:inputType="text"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/productPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unit_price"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/priceBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="20"
        android:inputType="numberDecimal"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/productCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Unit_cost"
        android:visibility="gone"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/costBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="20"
        android:visibility="gone"
        android:inputType="numberDecimal"
        android:textSize="18sp" />



    <TextView
        android:id="@+id/productImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Image"
        android:visibility="gone"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/imageBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="20"
        android:inputType="text"
        android:visibility="gone"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/category_Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Category"
        android:textSize="20sp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/categorySpinner">

    </Spinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/group_topping_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nav_group_topping"
            android:gravity="left"
            android:textSize="20sp" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nav_no_topping"
            android:id="@+id/checkbox_tp"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/groupTopping"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0.5dp"
            android:layout_gravity="center">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/clearButton"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/btn_red"
            android:text="@string/clear"
            android:textSize="20sp" />

        <Button
            android:id="@+id/confirmButton"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/btn_green"
            android:text="@string/confirm"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>

</ScrollView>